ingress/simplefanout.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app1
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: sbeliakou/echo-msg
        ports:
        - name: http
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app1-svc
  labels:
    app: app1
spec:
  ports:
  - port: 80
  selector:
    app: app1
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app2
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: sbeliakou/echo-msg
        ports:
        - name: http
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app2-svc
  labels:
    app: app2
spec:
  ports:
  - port: 80
  selector:
    app: app2
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app-default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: app-default
    spec:
      containers:
      - name: app-default
        image: sbeliakou/echo-msg
        ports:
        - name: http
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app-default-svc
  labels:
    app: app-default
spec:
  ports:
  - port: 80
  selector:
    app: app-default
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: webapps.example
    http:
      paths:
      - path: /app1
        backend:
          serviceName: app1-svc
          servicePort: 80
      - path: /app2
        backend:
          serviceName: app2-svc
          servicePort: 80
      - backend:
          serviceName: app-default-svc
          servicePort: 80
